--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://user_node_cafe:as55kmxaLMOvJbqM@clustercoffe.2d9gbl5.mongodb.net/cafeDB
+SECRETEKEY=M7pub1ckK3y45@901
