--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://user_node_cafe:as55kmxaLMOvJbqM@clustercoffe.2d9gbl5.mongodb.net/cafeDB
 SECRETEKEY=M7pub1ckK3y45@901
+
+GOOGLE_CLIENT_ID=612359630812-nadngun6e6hm32mi8f52p4raooci2tl1.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
